--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 body {
   display: flex;
   flex-direction: column;
-  font-family: monospace;
+  font-family: serif;
   font-size: 1.1rem;
   text-align: center;
 }
